--- a/index.html
+++ b/index.html
@@ -61,6 +61,32 @@
                 Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, SQL, and C. Stng background in project management and customer relations.
             </p>
         </main>
+        <section>
+            <h2>技能</h2>
+            <ol>
+                <li>HTML 5 &amp; CSS3</li>
+                <li>JavaScript</li>
+                <li>jQuery</li>
+                <li>Vue</li>
+                <li>React</li>
+                <li>HTTP</li>
+            </ol>
+        </section>
+        <section>
+            <h2>作品集</h2>
+            <nav>
+                <ol>
+                    <li>所有</li>
+                    <li>框架</li>
+                    <li>原生JS&amp;CSS</li>
+                </ol>
+            </nav>
+            <div class="jobs">
+                <div class="big"></div>
+                <div class="small"></div> 
+                <div class="small"></div> 
+            </div>
+        </section>
     </header>
 </body>
 </html>
