--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./a.css">
     <title>杨宇文的个人简历</title>
 </head>
 <body>
-    <header>
+    <header class="topNavBar clearfix">
         <img src="#" alt="logo">
         <nav>
-            <ul>
+            <ul class="clearfix">
                 <li><a>ABOUT</a></li>
                 <li><a>SKILLS</a></li>
                 <li><a>PORTFOLIO</a></li>
@@ -22,71 +23,71 @@
                 <li><a>OTHER</a></li>
             </ul>
         </nav>
-        <div class="banner" style="background-image: url(#)"></div>
-        <main>
-            <div class="card">
-                <div class="picture">
-                    <img src="#" alt="头像">
-                </div>
-                <div class="text">
-                    <div class="profile">
-                        <span class="welcome">hello</span>
-                        <h1>杨宇文</h1>
-                        <p>前端开发工程师</p>
-                        <hr>
-                        <dl>
-                            <dt>年龄</dt>
-                            <dd>20</dd>
-                            <dt>所在城市</dt>
-                            <dd>深圳</dd>
-                            <dt>邮箱地址</dt>
-                            <dd>1025414646@qq.com</dd>
-                            <dt>联系电话</dt>
-                            <dd>17707022892</dd>
-                        </dl>
-                    </div>
-                </div>
-                <footer>
-                    <a herf="#"><img src="#" alt=""></a>
-                    <a herf="#"><img src="#" alt=""></a>
-                    <a herf="#"><img src="#" alt=""></a>
-                    <a herf="#"><img src="#" alt=""></a>
-                    <a herf="#"><img src="#" alt=""></a>
-                    <a herf="#"><img src="#" alt=""></a>
-                    <a herf="#"><img src="#" alt=""></a>
-                </footer>
-            </div>
-            <a href="#" class="button">下 载 PDF 简 历</a>
-            <p>
-                Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, SQL, and C. Stng background in project management and customer relations.
-            </p>
-        </main>
-        <section>
-            <h2>技能</h2>
-            <ol>
-                <li>HTML 5 &amp; CSS3</li>
-                <li>JavaScript</li>
-                <li>jQuery</li>
-                <li>Vue</li>
-                <li>React</li>
-                <li>HTTP</li>
-            </ol>
-        </section>
-        <section>
-            <h2>作品集</h2>
-            <nav>
-                <ol>
-                    <li>所有</li>
-                    <li>框架</li>
-                    <li>原生JS&amp;CSS</li>
-                </ol>
-            </nav>
-            <div class="jobs">
-                <div class="big"></div>
-                <div class="small"></div> 
-                <div class="small"></div> 
-            </div>
-        </section>
     </header>
+    <div class="banner" style="background-image: url(#)"></div>
+    <main>
+        <div class="card">
+            <div class="picture">
+                <img src="#" alt="头像">
+            </div>
+            <div class="text">
+                <div class="profile">
+                    <span class="welcome">hello</span>
+                    <h1>杨宇文</h1>
+                    <p>前端开发工程师</p>
+                    <hr>
+                    <dl>
+                        <dt>年龄</dt>
+                        <dd>20</dd>
+                        <dt>所在城市</dt>
+                        <dd>深圳</dd>
+                        <dt>邮箱地址</dt>
+                        <dd>1025414646@qq.com</dd>
+                        <dt>联系电话</dt>
+                        <dd>17707022892</dd>
+                    </dl>
+                </div>
+            </div>
+            <footer>
+                <a herf="#"><img src="#" alt=""></a>
+                <a herf="#"><img src="#" alt=""></a>
+                <a herf="#"><img src="#" alt=""></a>
+                <a herf="#"><img src="#" alt=""></a>
+                <a herf="#"><img src="#" alt=""></a>
+                <a herf="#"><img src="#" alt=""></a>
+                <a herf="#"><img src="#" alt=""></a>
+            </footer>
+        </div>
+        <a href="#" class="button">下 载 PDF 简 历</a>
+        <p>
+            Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, SQL, and C. Stng background in project management and customer relations.
+        </p>
+    </main>
+    <section>
+        <h2>技能</h2>
+        <ol>
+            <li>HTML 5 &amp; CSS3</li>
+            <li>JavaScript</li>
+            <li>jQuery</li>
+            <li>Vue</li>
+            <li>React</li>
+            <li>HTTP</li>
+        </ol>
+    </section>
+    <section>
+        <h2>作品集</h2>
+        <nav>
+            <ol>
+                <li>所有</li>
+                <li>框架</li>
+                <li>原生JS&amp;CSS</li>
+            </ol>
+        </nav>
+        <div class="jobs">
+            <div class="big"></div>
+            <div class="small"></div> 
+            <div class="small"></div> 
+        </div>
+    </section>
 </body>
 </html>
