--- a/index.html
+++ b/index.html
@@ -6,58 +6,81 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./a.css">
     <title>杨宇文的个人简历</title>
+    <script src="//at.alicdn.com/t/font_610019_76d9fbqxelt2zkt9.js"></script>
+    <style type="text/css">
+        .icon {
+           width: 1em; height: 1em;
+           vertical-align: -0.15em;
+           fill: currentColor;
+           overflow: hidden;
+        }
+    </style>
 </head>
 <body>
-    <header class="topNavBar clearfix">
-        <a href="#" class="logo">
-            <span class="rs">RS</span><span class="card">card</span>
-        </a>
-        <nav>
-            <ul class="clearfix">
-                <li><a>ABOUT</a></li>
-                <li><a>SKILLS</a></li>
-                <li><a>PORTFOLIO</a></li>
-                <li><a>EXPERIENCE</a></li>
-                <li><a>PRICING</a></li>
-                <li><a>BLOG</a></li>
-                <li><a>CALENDAR</a></li>
-                <li><a>CONTACT</a></li>
-                <li><a>OTHER</a></li>
-            </ul>
-        </nav>
+    <header class="topNavBar">
+        <div class="topNavBar-inner clearfix">
+            <a href="#" class="logo">
+                <span class="rs">RS</span><span class="card">card</span>
+            </a>
+            <nav>
+                <ul class="clearfix">
+                    <li><a>ABOUT</a></li>
+                    <li><a>SKILLS</a></li>
+                    <li><a>PORTFOLIO</a></li>
+                    <li><a>EXPERIENCE</a></li>
+                    <li><a>PRICING</a></li>
+                    <li><a>BLOG</a></li>
+                    <li><a>CALENDAR</a></li>
+                    <li><a>CONTACT</a></li>
+                    <li><a>OTHER</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <div class="banner" style="background-image: url(#)"></div>
+    <div class="banner" style="background-image: url(./img/rs-cover-2-2-1-1.jpg)">
+        <div class="mask"></div>
+    </div>
     <main>
-        <div class="card">
-            <div class="picture">
-                <img src="#" alt="头像">
-            </div>
-            <div class="text">
-                <div class="profile">
-                    <span class="welcome">hello</span>
+        <div class="userCard">
+            <div class="textAndPicture clearfix">
+                <div class="picture">
+                    <img src="./img/startuper-1-299x347.jpg" width=295 height=342 alt="头像">
+                </div>
+                <div class="text">
+                    <span class="welcome">hello
+                        <span class="triangle"></span>
+                    </span>
                     <h1>杨宇文</h1>
                     <p>前端开发工程师</p>
                     <hr>
                     <dl>
                         <dt>年龄</dt>
                         <dd>20</dd>
-                        <dt>所在城市</dt>
+                        <dt>城市</dt>
                         <dd>深圳</dd>
-                        <dt>邮箱地址</dt>
+                        <dt>邮箱</dt>
                         <dd>1025414646@qq.com</dd>
-                        <dt>联系电话</dt>
+                        <dt>手机</dt>
                         <dd>17707022892</dd>
                     </dl>
                 </div>
             </div>
             <footer>
-                <a herf="#"><img src="#" alt=""></a>
-                <a herf="#"><img src="#" alt=""></a>
-                <a herf="#"><img src="#" alt=""></a>
-                <a herf="#"><img src="#" alt=""></a>
-                <a herf="#"><img src="#" alt=""></a>
-                <a herf="#"><img src="#" alt=""></a>
-                <a herf="#"><img src="#" alt=""></a>
+                    <a herf="#">
+                        <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-weixin"></use>
+                        </svg>
+                    </a>
+                    <a herf="#">
+                        <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-qq"></use>
+                        </svg>
+                    </a>
+                    <a herf="#">
+                        <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-github"></use>
+                        </svg>
+                    </a>
             </footer>
         </div>
         <a href="#" class="button">下 载 PDF 简 历</a>
