--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
                     </a>
             </footer>
         </div>
-        <a href="#" class="button">下 载 PDF 简 历</a>
-        <p>
+        <p class="downloadResumeWrapper">
+            <a href="./resume.pdf" class="downloadResume" target="_blank" download>下 载 PDF 简 历</a>
+        </p>
+        <p class="selfIntroduction">
             Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming languages including JavaScript, SQL, and C. Stng background in project management and customer relations.
         </p>
     </main>
