--- a/index.html
+++ b/index.html
@@ -6,89 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/css/swiper.min.css">
     <title>杨宇文的个人简历</title>
-    <script src="//at.alicdn.com/t/font_610019_76d9fbqxelt2zkt9.js"></script>
-    <style type="text/css">
-        .icon {
-            width: 1em;
-            height: 1em;
-            vertical-align: -0.15em;
-            fill: currentColor;
-            overflow: hidden;
-        }
-
-        #sitewelcome.active {
-            display: flex;
-        }
-
-        #sitewelcome {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            justify-content: center;
-            align-items: center;
-            background: #FEFEFE;
-            z-index: 1;
-        }
-
-        .loading {
-            width: 200px;
-            height: 200px;
-            position: relative;
-            /* background: #686868;
-            border: 1px solid #686868; */
-        }
-
-        .loading::before,
-        .loading::after {
-            content: '';
-            background: #686868;
-            position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            margin: auto;
-            border-radius: 50%;
-            width: 0;
-            height: 0;
-            animation: loadingAnimation linear 1.5s infinite;
-        }
-
-        .loading::after {
-            animation-delay: 0.8s;
-        }
-
-        @keyframes loadingAnimation {
-            0% {
-                width: 0;
-                height: 0;
-                opacity: 1;
-            }
-            100% {
-                width: 50px;
-                height: 50px;
-                opacity: 0;
-            }
-        }
-    </style>
 </head>
 
 <body>
-    <div id="sitewelcome" class="site-welcome active">
-        <div class="loading"></div>
-    </div>
     <header id="topNavBar" class="topNavBar">
         <div class="topNavBar-inner clearfix">
             <a href="#" class="logo">
-                <span class="rs">RS</span><span class="card">card</span>
+                <span class="rs">RS</span>
+                <span class="card">card</span>
             </a>
             <nav>
                 <ul class="clearfix">
-                    <li><a href="#about">关于</a></li>
+                    <li>
+                        <a href="#about">关于</a>
+                    </li>
                     <li>
                         <a href="#skills">技能</a>
                         <ul class="submenu">
@@ -105,10 +38,18 @@
                             <li>作品3</li>
                         </ul>
                     </li>
-                    <li><a>博客</a></li>
-                    <li><a>日历</a></li>
-                    <li><a>联系方式</a></li>
-                    <li><a>其他</a></li>
+                    <li>
+                        <a>博客</a>
+                    </li>
+                    <li>
+                        <a>日历</a>
+                    </li>
+                    <li>
+                        <a>联系方式</a>
+                    </li>
+                    <li>
+                        <a>其他</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -211,123 +152,41 @@
     </section>
     <section data-x id="portfolio" class="portfolio">
         <h2>作品集</h2>
-        <nav>
-            <ol class="clearfix">
-                <li id="portfolio1">所有</li>
-                <li id="portfolio2">框架</li>
-                <li id="portfolio3">原生JS&amp;CSS</li>
-            </ol>
-            <div id="portfolioBar" class="bar state1">
-                <div class="bar-inner"></div>
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <img src="./img/11.jpg" class="swiper-slide">
+                <img src="./img/22.jpg" class="swiper-slide">
+                <img src="./img/33.jpg" class="swiper-slide">
             </div>
-        </nav>
-        <script>
-            portfolio1.onclick = function () {
-                portfolioBar.className = 'bar state1';
-            }
-            portfolio2.onclick = function () {
-                portfolioBar.className = 'bar state2';
-            }
-            portfolio3.onclick = function () {
-                portfolioBar.className = 'bar state3';
-            }
-        </script>
-        <div class="works">
-            <div class="big" style="top: 0; left: 0;">
-                <img src="./img/1.jpg" alt="作品1">
-            </div>
-            <div class="small" style="top: 0; left: 630px;">
-                <img src="./img/2.jpg" alt="作品2">
-            </div>
-            <div class="small" style="top: 298px; left: 630px;">
-                <img src="./img/3.jpg" alt="作品3">
-            </div>
+            <div class="swiper-pagination"></div>
+        </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </section>
+    <section data-x id="messageBoard" class="messageBoard">
+        <h2>留言板</h2>
+        <div class="loadMessages">
+            <ol></ol>
+            <form id="messageForm">
+                <label>姓名
+                    <input type="text" name="name">
+                </label>
+                <label>内容
+                    <input type="text" name="content">
+                </label>
+                <input type="submit">
+            </form>
         </div>
     </section>
     <script src="https://cdn.bootcss.com/tween.js/r14/Tween.min.js"></script>
-    <script>
-        sitewelcome.classList.remove('active')
-
-        let specialTags = document.querySelectorAll('[data-x]')
-        for (let i = 0; i < specialTags.length; i++) {
-            specialTags[i].classList.add('offset')
-        }
-        showIn()
-
-        function showIn() {
-            let specialTags = document.querySelectorAll('[data-x]')
-            let minindex = 0
-            for (let i = 0; i < specialTags.length; i++) {
-                if (Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minindex].offsetTop -
-                        window.scrollY)) {
-                    minindex = i
-                }
-            }
-            let id = specialTags[minindex].id
-            let a = document.querySelector('a[href="#' + id + '"]')
-            let li = a.parentNode
-            let brothersAndMe = li.parentNode.children
-            for (let i = 0; i < brothersAndMe.length; i++) {
-                brothersAndMe[i].classList.remove('highLight')
-            }
-            li.classList.add('highLight')
-            specialTags[minindex].classList.remove('offset')
-        }
-        window.onscroll = function (x) {
-            if (window.scrollY > 0) {
-                topNavBar.classList.add('stick')
-            } else {
-                topNavBar.classList.remove('stick')
-            }
-            showIn()
-        }
-        let liTags = document.querySelectorAll('.topNavBar nav>ul>li')
-        for (let i = 0; i < liTags.length; i++) {
-            liTags[i].onmouseenter = function (x) {
-                x.currentTarget.classList.add('active')
-            }
-            liTags[i].onmouseleave = function (x) {
-                x.currentTarget.classList.remove('active')
-            }
-        }
-
-        function animate(time) {
-            requestAnimationFrame(animate);
-            TWEEN.update(time);
-        }
-        requestAnimationFrame(animate);
-
-        let aTags = document.querySelectorAll('.topNavBar nav>ul>li a')
-        for (let i = 0; i < aTags.length; i++) {
-            aTags[i].onclick = function (x) {
-                x.preventDefault()
-                let a = x.currentTarget
-                let href = a.getAttribute('href')
-                let element = document.querySelector(href)
-                let top = element.offsetTop
-
-                let currentTop = window.scrollY
-                let targetTop = top - 80
-                let s = targetTop - currentTop
-                let t = Math.abs((s / 100) * 300)
-                if (t > 500) {
-                    t = 500
-                }
-                var coords = {
-                    y: currentTop
-                }
-                var tween = new TWEEN.Tween(coords)
-                    .to({
-                        y: targetTop
-                    }, t)
-                    .easing(TWEEN.Easing.Quartic.InOut)
-                    .onUpdate(function () {
-                        window.scrollTo(0, coords.y)
-                    })
-                    .start()
-            }
-        }
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/js/swiper.min.js"></script>
+    <script src="//at.alicdn.com/t/font_610019_76d9fbqxelt2zkt9.js"></script>
+    <script src="//cdn1.lncld.net/static/js/3.6.7/av-min.js"></script>
+    <script src="./init-swiper.js"></script>
+    <script src="./sticky-topbar.js"></script>
+    <script src="./auto-slide-up.js"></script>
+    <script src="./smoothly-navigation.js"></script>
+    <script src="./message.js"></script>
 </body>
 
 </html>
