--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                         </ul>
                     </li>
                     <li>
+                        <a href="#messageBoard">留言</a>
+                    </li>
+                    <li>
                         <a>博客</a>
                     </li>
                     <li>
