--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <header id="topNavBar" class="topNavBar">
-        <div class="topNavBar-inner clearfix">
+        <div class="topNavBar-inner">
             <a href="#" class="logo">
-                <span class="rs">RS</span>
-                <span class="card">card</span>
+                <span class="rs">Y</span>
+                <span class="card">YW</span>
             </a>
             <nav>
                 <ul class="clearfix">
@@ -47,12 +47,6 @@
                     <li>
                         <a>日历</a>
                     </li>
-                    <li>
-                        <a>联系方式</a>
-                    </li>
-                    <li>
-                        <a>其他</a>
-                    </li>
                 </ul>
             </nav>
         </div>
@@ -67,11 +61,11 @@
                     <img src="./img/startuper-1-299x347.jpg" width=295 height=342 alt="头像">
                 </div>
                 <div class="text">
-                    <span class="welcome">hello
+                    <span class="welcome">你好，我是一名前端开发工程师
                         <span class="triangle"></span>
                     </span>
                     <h1>杨宇文</h1>
-                    <p>前端开发工程师</p>
+                    <p>前端开发工程师，熟悉HTML5/CSS3/JavaScript/Vue。</p>
                     <hr>
                     <dl>
                         <dt>年龄</dt>
@@ -80,8 +74,8 @@
                         <dd>深圳</dd>
                         <dt>邮箱</dt>
                         <dd>1025414646@qq.com</dd>
-                        <dt>手机</dt>
-                        <dd>17707022892</dd>
+                        <dt>QQ/微信</dt>
+                        <dd>1025414646</dd>
                     </dl>
                 </div>
             </div>
@@ -117,75 +111,119 @@
         <ol class="clearfix">
             <li>
                 <h3>HTML 5 &amp; CSS3</h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 65%"></div>
-                </div>
+                <p>能独立制作精美网页，掌握 CSS3 动画，过渡效果，响应式等常用技术。</p>
             </li>
             <li>
-                <h3>JavaScript</h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 88%"></div>
-                </div>
+                <h3>移动端页面</h3>
+                <p>会使用 REM、vw/vh、FastClick 等技术制作适配手机设备的页面。</p>
             </li>
             <li>
                 <h3>jQuery</h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 48%"></div>
-                </div>
+                <p>熟悉jQuery 的常用API，能使用jQuery 制作网站、轮播等。</p>
             </li>
             <li>
                 <h3>Vue</h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 70%"></div>
-                </div>
+                <p>熟悉 Vue 常用功能，如组件、Vue-Router、双向绑定等。</p>
             </li>
             <li>
-                <h3>React</h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 60%"></div>
-                </div>
+                <h3>小程序制作</h3>
+                <p>可以独立进行小程序开发，熟悉AAAA、BBB、CCCC相关API或组件的使用。</p>
             </li>
             <li>
-                <h3>HTTP</h3>
-                <div class="progressBar">
-                    <div class="progress" style="width: 50%"></div>
-                </div>
+                <h3>前端框架</h3>
+                <p>理解 MVC、MVVM 等思想，可以熟练使用相关的库，如 Vue。</p>
             </li>
         </ol>
     </section>
     <section data-x id="portfolio" class="portfolio">
         <h2>作品集</h2>
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <img src="./img/11.jpg" class="swiper-slide">
-                <img src="./img/22.jpg" class="swiper-slide">
-                <img src="./img/33.jpg" class="swiper-slide">
-            </div>
-            <div class="swiper-pagination"></div>
+        <div class="works">
+            <ol>
+                <li>
+                    <img src="./img/11.jpg" class="swiper-slide">
+                    <p>关键字</p>
+                    <div>
+                        <a href="javascript:void(0);">预览链接</a>
+                        <a href="javascript:void(0);">源码链接</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="./img/22.jpg" class="swiper-slide">
+                    <p>关键字</p>
+                    <div>
+                        <a href="javascript:void(0);">预览链接</a>
+                        <a href="javascript:void(0);">源码链接</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="./img/33.jpg" class="swiper-slide">
+                    <p>关键字</p>
+                    <div>
+                        <a href="javascript:void(0);">预览链接</a>
+                        <a href="javascript:void(0);">源码链接</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="./img/11.jpg" class="swiper-slide">
+                    <p>关键字</p>
+                    <div>
+                        <a href="javascript:void(0);">预览链接</a>
+                        <a href="javascript:void(0);">源码链接</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="./img/22.jpg" class="swiper-slide">
+                    <p>关键字</p>
+                    <div>
+                        <a href="javascript:void(0);">预览链接</a>
+                        <a href="javascript:void(0);">源码链接</a>
+                    </div>
+                </li>
+                <li>
+                    <img src="./img/33.jpg" class="swiper-slide">
+                    <p>关键字</p>
+                    <div>
+                        <a href="javascript:void(0);">预览链接</a>
+                        <a href="javascript:void(0);">源码链接</a>
+                    </div>
+                </li>
+            </ol>
         </div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
     </section>
     <section data-x id="messageBoard" class="messageBoard">
         <h2>留言板</h2>
         <div class="loadMessages">
             <ol></ol>
-            <form id="messageForm">
-                <label>姓名
-                    <input type="text" name="name">
+            <form id="messageForm" class="clearfix">
+                <label>
+                    <span>姓名:</span>
+                    <input type="text" name="name" id="inputName">
                 </label>
-                <label>内容
-                    <input type="text" name="content">
+                <label>
+                    <span>内容:</span>
+                    <textarea type="text" name="content" width="300" height="400" id="inputContent" placeholder="扯淡、吐槽、表扬、鼓励......想说啥就说啥！"></textarea>
                 </label>
-                <input type="submit">
+                <input type="submit" id="submitButton" value="发表评论">
             </form>
+            <div class="pages"></div>
         </div>
     </section>
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+    <script>
+        window.sr = ScrollReveal();
+        sr.reveal('section', {
+            duration: 500,
+            origin: 'bottom',
+            distance: '150px',
+        })
+    </script>
     <script src="https://cdn.bootcss.com/tween.js/r14/Tween.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/js/swiper.min.js"></script>
     <script src="//at.alicdn.com/t/font_610019_76d9fbqxelt2zkt9.js"></script>
     <script src="//cdn1.lncld.net/static/js/3.6.7/av-min.js"></script>
-    <script src="./init-swiper.js"></script>
+    <script src="./View.js"></script>
+    <script src="./Model.js"></script>
+    <script src="./Controller.js"></script>
     <script src="./sticky-topbar.js"></script>
     <script src="./auto-slide-up.js"></script>
     <script src="./smoothly-navigation.js"></script>
